test/invalid/subscript_non_list.py
# Subscript access on non-list type
def main() -> None:
    x: int = 5
    y: int = x[0]
    print(y)
